--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "dancoat.es site",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,11 @@
   },
   "homepage": "https://github.com/dancoates/dancoat.es#readme",
   "dependencies": {
+    "app-module-path": "^2.1.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "dotenv": "^2.0.0",
     "graphql": "^0.7.0",
     "hapi": "^15.0.3",
     "immutable": "^3.8.1",
@@ -26,5 +32,6 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0"
-  }
+  },
+  "devDependencies": {}
 }
