--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
+    "watch": "webpack-dev-server",
+    "build": "webpack -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,19 +21,32 @@
   "homepage": "https://github.com/dancoates/dancoat.es#readme",
   "dependencies": {
     "app-module-path": "^2.1.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "dotenv": "^2.0.0",
-    "graphql": "^0.7.0",
-    "hapi": "^15.0.3",
+    "babel-core": "^6.22.1",
+    "babel-plugin-inferno": "^1.7.0",
+    "babel-preset-env": "^1.1.8",
+    "babel-preset-react": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "dotenv": "^4.0.0",
+    "graphql": "^0.8.2",
+    "hapi": "^16.1.0",
     "immutable": "^3.8.1",
+    "inferno": "^1.2.2",
     "pg": "^6.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-loader": "^6.2.10",
+    "css-loader": "^0.26.1",
+    "file-loader": "^0.9.0",
+    "node-sass": "^4.3.0",
+    "postcss-loader": "^1.2.2",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "webpack": "beta",
+    "webpack-dev-server": "beta"
+  }
 }
