Basic server-side rendering

--- a/package.json
+++ b/package.json
@@ -23,20 +23,25 @@
     "app-module-path": "^2.1.0",
     "babel-core": "^6.22.1",
     "babel-plugin-inferno": "^1.7.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.1.8",
-    "babel-preset-react": "^6.22.0",
     "babel-register": "^6.22.0",
     "dotenv": "^4.0.0",
     "graphql": "^0.8.2",
     "hapi": "^16.1.0",
+    "history": "^4.5.1",
     "immutable": "^3.8.1",
     "inferno": "^1.2.2",
+    "inferno-component": "^1.2.2",
+    "inferno-redux": "^1.2.2",
+    "inferno-router": "^1.2.2",
+    "inferno-server": "^1.2.2",
     "pg": "^6.1.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0",
+    "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
     "babel-loader": "^6.2.10",
@@ -45,8 +50,6 @@
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.2.2",
     "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "webpack": "beta",
-    "webpack-dev-server": "beta"
+    "style-loader": "^0.13.1"
   }
 }
