Switching back to react, finalizing js build process

--- a/.babelrc
+++ b/.babelrc
@@ -4,10 +4,10 @@
             "targets": {
                 "node": "current"
             }
-        }]
+        }],
+        "react"
     ],
     "plugins" : [
-        "inferno",
         "transform-object-rest-spread"
     ]
 }
