--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "dancoat.es site",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "watch": "webpack-dev-server",
-    "build": "webpack -p",
+    "server-start": "node index",
+    "server-watch": "nodemon --delay 2 index",
+    "client-build": "webpack -p",
+    "client-watch": "webpack-dev-server --hot --inline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,21 +23,21 @@
   "dependencies": {
     "app-module-path": "^2.1.0",
     "babel-core": "^6.22.1",
-    "babel-plugin-inferno": "^1.7.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.1.8",
+    "babel-preset-react": "^6.23.0",
     "babel-register": "^6.22.0",
+    "boom": "^4.2.0",
     "dotenv": "^4.0.0",
     "graphql": "^0.8.2",
     "hapi": "^16.1.0",
     "history": "^4.5.1",
     "immutable": "^3.8.1",
-    "inferno": "^1.2.2",
-    "inferno-component": "^1.2.2",
-    "inferno-redux": "^1.2.2",
-    "inferno-router": "^1.2.2",
-    "inferno-server": "^1.2.2",
     "pg": "^6.1.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "webpack": "^2.2.1",
@@ -48,6 +49,7 @@
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
     "node-sass": "^4.3.0",
+    "nodemon": "^1.11.0",
     "postcss-loader": "^1.2.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1"
