--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server-start": "node index",
     "server-watch": "nodemon --delay 2 index",
-    "client-build": "webpack -p",
+    "client-build": "NODE_ENV=production webpack -p",
     "client-watch": "webpack-dev-server --hot --inline",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,12 +27,14 @@
     "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.22.0",
+    "bcrypt": "^1.0.2",
     "boom": "^4.2.0",
     "dotenv": "^4.0.0",
     "graphql": "^0.8.2",
     "hapi": "^16.1.0",
     "history": "^4.5.1",
     "immutable": "^3.8.1",
+    "jsonwebtoken": "^7.3.0",
     "pg": "^6.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -40,17 +42,21 @@
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "sql-template-strings": "^2.2.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
     "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.3",
     "babel-loader": "^6.2.10",
     "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "beta",
     "file-loader": "^0.9.0",
     "node-sass": "^4.3.0",
     "nodemon": "^1.11.0",
     "postcss-loader": "^1.2.2",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1"
   }
