--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "history": "^4.5.1",
     "immutable": "^3.8.1",
     "jsonwebtoken": "^7.3.0",
+    "moment": "^2.17.1",
     "pg": "^6.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
