--- a/.env-example
+++ b/.env-example
@@ -1,10 +1,12 @@
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 SERVER_PROTOCOL=
 SERVER_HOST=
 SERVER_PORT=
-JWT_SECRET_KEY=
 CLIENT_PORT=
 DATABASE_NAME=
 DATABASE_HOST=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_PORT=
+JWT_SECRET_KEY=
