--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "sql-template-strings": "^2.2.2",
@@ -62,6 +63,7 @@
     "postcss-loader": "^1.2.2",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "webpack-manifest-plugin": "^1.1.0"
   }
 }
