--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "immutable": "^3.8.1",
     "jsonwebtoken": "^7.3.0",
     "moment": "^2.17.1",
-    "pg": "^6.1.0",
+    "pg-promise": "^5.7.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
@@ -45,7 +45,6 @@
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "sql-template-strings": "^2.2.2",
     "uuid": "^3.0.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
