--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,7 @@
         "react"
     ],
     "plugins" : [
-        "transform-object-rest-spread"
+        "transform-object-rest-spread",
+        "babel-plugin-inline-import"
     ]
 }
