--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,3 @@
 {
-    "presets": [
-        ["env", {
-            "targets": {
-                "node": "current"
-            }
-        }],
-        "react"
-    ],
-    "plugins" : [
-        "transform-object-rest-spread",
-        "babel-plugin-inline-import"
-    ]
+    "presets": ["blueflag"]
 }
