--- a/package.json
+++ b/package.json
@@ -28,47 +28,48 @@
     "babel-core": "^6.22.1",
     "babel-plugin-inline-import": "^2.0.5",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-blueflag": "^0.6.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.22.0",
     "bcrypt": "^1.0.2",
-    "boom": "^4.2.0",
+    "boom": "^5.2.0",
     "dotenv": "^4.0.0",
-    "flow-bin": "^0.48.0",
-    "graphql": "^0.8.2",
+    "flow-bin": "^0.53.1",
+    "graphql": "^0.11.1",
     "hapi": "^16.1.0",
     "history": "^4.5.1",
     "immutable": "^3.8.1",
     "jsonwebtoken": "^7.3.0",
     "moment": "^2.17.1",
-    "pg-promise": "^5.7.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^4.0.0",
-    "react-router-dom": "^4.0.0",
-    "redux": "^3.6.0",
+    "pg-promise": "^6.5.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "uuid": "^3.0.1",
-    "webpack": "^2.2.1",
+    "webpack": "^3.5.5",
     "webpack-dev-server": "^2.3.0",
     "whatwg-fetch": "^2.0.2",
-    "ws": "^2.1.0"
+    "ws": "^3.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.3",
-    "babel-loader": "^6.2.10",
-    "css-loader": "^0.26.1",
+    "autoprefixer": "^7.1.3",
+    "babel-loader": "^7.1.2",
+    "css-loader": "^0.28.5",
     "eslint": "^4.0.0",
-    "eslint-config-blueflag": "^0.4.0",
-    "extract-text-webpack-plugin": "beta",
-    "file-loader": "^0.9.0",
+    "eslint-config-blueflag": "^0.5.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "node-sass": "^4.3.0",
     "nodemon": "^1.11.0",
-    "postcss-loader": "^1.2.2",
+    "postcss-loader": "^2.0.6",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack-manifest-plugin": "^1.1.0"
   }
 }
